Sat Mar 11 23:35:20 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added proper commandline option parsing courtesy of getopt_long
	:) Obviously not everyone has this, so I include it myself. Now
	you can combine args in nice ways: "feh -kR20 http://some.webcam"
	* It passes "make test" okay, but I reserve the right to have
	broken something =) Let me know?

Sat Mar 11 01:34:36 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* 0.6.4 released

Tue Mar  7 23:07:40 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed evil segv due to uninitialised gc.

Sat Mar  4 16:33:29 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* --help output for the new options.
	* Added --booth, with is a shortcut for a fullscreen slideshow
	with an auto-change every 20 seconds...

Sat Mar  4 15:59:44 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Bah. Disabled zooming in fullscreen mode for now. I'll do the
	math and fix it later.
	* I think I'm gonna have to rewrite shedloads of it to support
	window resizing etc...

Sat Mar  4 14:46:42 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed progressive loading in fullscreen mode. Those callbacks
	*are* on crack, but for them to make sense would be a big rewrite
	I don't have time for now =)
	* Unfortunately, zooming in fullscreen mode is broken, I'm looking
	at this now. Also, I get a weird segv when I do "feh -F directory"
	but not when I do "feh -F file" or "feh -F file1 file2", and not
	when I do "feh directory" or "feh -b directory" etc. I'm trying to
	work this out, but the fullscreen thing should be independent of
	the filelist thing...

Fri Mar  3 22:44:25 PST 2000  Michael Jennings <mej@eterm.org>

	* Added two new options.  --randomize will take the file list and
	rearrange it into a random order.  --full-screen or -F will create
	a screen-sized borderless window (akin to a screensaver) and will
	center the image within it.  NOTE:  At this point, full screen mode